// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `
<div>
  <div
    class="inline-block truncate align-middle"
  />
</div>
`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="inline-block truncate align-middle"
  >
    <span
      class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with normal font 1`] = `
<div>
  <div
    class="inline-block truncate align-middle"
  >
    <span
      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-normal text-base"
      data-testid="address__wallet-name"
    >
      Sample Wallet
    </span>
    <span
      class="sc-AxjAm StDqN text-theme-neutral-light font-normal text-base"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="inline-block truncate align-middle"
  >
    <span
      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
      data-testid="address__wallet-name"
    >
      Sample Wallet
    </span>
    <span
      class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;
